--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <!-- Para colocar encabezados-->
+    <!--PRUEBA PARA VER SI FUNCIONO-->
+
 
     <header> 
         <h1> Universidad Central del Ecuador </h1> 
