--- a/pages/estilosenlinea.html
+++ b/pages/estilosenlinea.html
@@ -18,6 +18,9 @@
         <h2 style="background: blue;"> Carrera de Computación </h2>
         <h3 style="color : red; background: yellow;"> Alexis Hurtado </h3>
 
+        <h4 style="font-family: Arial, Helvetica, sans-serif;font-size: 50px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, itaque?</h4>
+        <h1 style="color:red"> prueba </h1>
+
     </section>
 
     <aside>  </aside>
