--- a/pages/estilosexterno.html
+++ b/pages/estilosexterno.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos2.css">
 </head>
+
 <body>
     
     <header> 
@@ -13,6 +16,10 @@
     <nav>  </nav>
 
     <section> 
+        <h1>Universidad Central del Ecuador</h1>
+        <h1>Carrera de Computación</h1>
+        <h2>Programación web</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt excepturi delectus accusantium! Exercitationem et excepturi consequuntur saepe officiis deleniti a repellat cupiditate enim, sapiente eaque, mollitia hic architecto quos aut rem atque natus maxime doloremque ut maiores. Enim, voluptates iure.</p>
     </section>
 
     <aside>  </aside>
