--- a/pages/estilosinterno.html
+++ b/pages/estilosinterno.html
@@ -4,20 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--Se declaran en la cabecera-->
+    <!--Declaro la declaracion completa de mis estilos-->
+    <style>
+        h1 {
+            color: red;
+            background: green;
+            padding: 20px 10px 40px 5px;
+            width: 200px;
+            height: 70px;
+            border: dotted black 2px;
+            margin: 20px 20px 20px 20px;
+        }
+
+        h2 {
+            color: #1b1f17;
+            background: #191a74;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-size: 12px;
+            margin-top: 50px;
+            margin-bottom: 10px;
+            border-bottom: solid red 1px;
+        }
+
+        p {
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            color: cornflowerblue;
+            background: yellow;
+        }
+    </style>
+
 </head>
 <body>
     
     <header> 
+        <h1>Ecuador país Amazónico</h1>
     </header> 
 
     <nav>  </nav>
 
     <section> 
+        <h1>Universidad Central del Ecuador</h1>
+        <h1>Carrera de Computación</h1>
+        <h2>Programación web</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat, dolor natus at harum, adipisci deleniti non id eveniet quasi nostrum iusto cum nihil vero veritatis excepturi voluptatum perferendis tempore temporibus incidunt porro ipsum hic! Eos numquam facere porro quasi recusandae.</p>
     </section>
 
     <aside>  </aside>
 
-    <footer>   
+    <footer>
+        <h1>Todos los derechos reservados</h1>
     </footer>
 
 
