--- a/pages/estilosinterno.html
+++ b/pages/estilosinterno.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!--Se declaran en la cabecera-->
+    <!--Se declaran en la cabecera, APLICAMOS A UNA SOLA PAGINA-->
     <!--Declaro la declaracion completa de mis estilos-->
     <style>
         h1 {
