--- a/pages/estilosexterno.html
+++ b/pages/estilosexterno.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="../css/estilos2.css">
 </head>
-
+<!-- Cuando vamos aplicar a varias paginas el externo-->
 <body>
     
     <header> 
